--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # Add the dependency for the Firebase Core Flutter SDK
+  firebase_core: any
 
 dev_dependencies:
   flutter_test:
