--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,9 @@ app.*.map.json
 # Firebase
 GoogleService-Info.plist
 google-services.json
+
+# fvm
+flutter_sdk
+
+# vscode
+.vscode/settings.json
