--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,13 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase
+GoogleService-Info.plist
+google-services.json
+
+# fvm
+flutter_sdk
+
+# vscode
+.vscode/settings.json
